--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
+    <meta name="google-site-verification" content="X-2OLvb_nEwokZi5RmICLdcma94Bq4x81I0WWkJbnRE" />
     <meta
       name="description"
       content="Web site created using create-react-app"
